force-app/main/default/objects/cadmus_core__Actionable__c/fields/Get_Url_Pictures_DataSource__c.field-meta.xml
<CustomField>
    <fullName>Get_Url_Pictures_DataSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Get Url Pictures DataSource</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Actionables (Get Url Pictures DataSource)</relationshipLabel>
    <relationshipName>R_Get_Url_Pictures_DataSource</relationshipName>
    <type>Lookup</type>
</CustomField>