force-app/main/default/objects/cadmus_core__Actionable__c/fields/Rich_Text_Pic_Width__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_Pic_Width__c</fullName>
    <label>Rich Text Pic Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>