force-app/main/default/objects/cadmus_core__Actionable__c/recordTypes/Rich_Text_Pictures.recordType-meta.xml
<RecordType>
    <fullName>Rich_Text_Pictures</fullName>
    <active>true</active>
    <description>Process pictures for RichText fields</description>
    <label>Rich Text Pictures</label>
</RecordType>